# singbox-gui

./: .cursorignore  .cursorrules  LICENSE  README.md  eslint.config.mjs  flake.nix  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
.github/workflows/: release-linux.yml  release-macos.yml  release-windows.yml  release.yml
prompt/: current.md
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  main.rs  service.rs
src/app/: layout.tsx
src/app/home/: config-card.tsx  page.tsx  service-card.tsx
src/app/node-switch/: group-card.tsx  page.tsx
src/app/settings/: page.tsx
src/components/: mode-toggle.tsx
src/components/layouts/: main-layout.tsx  sidebar.tsx
src/lib/: config.ts  service.ts  store.ts
