[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.2.3", features = [] }
tauri-plugin-log = "2.0.0-rc"
dirs = "6.0.0"
regex = "1.11.1"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
env_logger = "0.11.6"
